package edu.fiuba.algo3.modelo.ladron;


/**
* @generated
*/
public class Estrategia {
    
    
    /**
    * @generated
    */
    private Ladron ;
    
    /**
    * @generated
    */
    private Objeto ;
    
    /**
    * @generated
    */
    private Caso ;
    
    /**
    * @generated
    */
    private Set<Ciudad> ;
    
    
    
    /**
    * @generated
    */
    public Caso get() {
        return this.;
    }
    
    /**
    * @generated
    */
    public Caso set(Caso ) {
        this. = ;
    }
    
    /**
    * @generated
    */
    public Ladron get() {
        return this.;
    }
    
    /**
    * @generated
    */
    public Ladron set(Ladron ) {
        this. = ;
    }
    
    /**
    * @generated
    */
    public Ciudad get() {
        return this.;
    }
    
    /**
    * @generated
    */
    public Ciudad set(Ciudad ) {
        this. = ;
    }
    
    /**
    * @generated
    */
    public Objeto get() {
        return this.;
    }
    
    /**
    * @generated
    */
    public Objeto set(Objeto ) {
        this. = ;
    }
    
}
