@startuml
'https://plantuml.com/class-diagram

'Clases'
'- privado'
'# protegido'
'~ privado del paquete'
'+ publico'

'{static} de clase'
'{abstract} abs (clase que no debe ser instanciada))'

'Comentarios'
'note top of nombreClase : In java, every class\nextends this one.'
'note "Nota flotante"'
'puedo darle un alias a una nota para conectarla con otras cosas:'
' note "mensaje" as Nota1'

class Ladron{
-parametros[] :String List
-ataques : int

+aparecer() :void
+atacar()
-ataqueConCuchillo()
-ataqueConArma()
}

Interface Objeto{
+setNombre(nombre :String) :void

}

class Comun{

}

class Valioso{

}

class MuyValioso{

}

class Estrategia{
+cargarCiudad(ciudad :Ciudad)
+getProximaCiudad() :Ciudad
}

class Ciudad{
-nombre: String
-visitas : int
-descripcion: String

+visitarEdificio() :String
+viajarACiudad(destino :Ciudad, velocidad :int, reloj :Reloj) :int

+setDescripcion(texto: String)
+setNombre(nombre :String)
+getDescripcion() :String
+getNombre() :String
-calcularDistancia(pais: Pais)
-getUbicacion() :Coordenadas
}

'Enlaces'
'<|-- herencia'
'<--  directo/depende de'
'*-- composicion'
'o-- agregacion'
'-- Asociacion'

'"1" *-- "*" listas'
':mensaje en linea'

Objeto --o Ladron
Comun --|> Objeto
Valioso --|> Objeto
MuyValioso --|> Objeto

Ciudad "4..7" --o "1 " Estrategia
Estrategia -* Objeto
@enduml